tooling/nargo_cli/tests/snapshots/execution_success/bit_shifts_runtime/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 64
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 16
        },
        "visibility": "private"
      },
      {
        "name": "u",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 64
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "14514982005979867414": {
        "error_kind": "string",
        "string": "attempt to bit-shift with overflow"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1dCZxVVRn/7iwMMwMCAgoIOqgost7z5g28EUQKAjcq2/fCmTdppkSlVlpZLrhSqdlq+yaiIppL7uW+4pZaLriSWlpaWpra/YZz5LxzDyhz/9/tXPX8fnfucN7lm+//ff/zP8u997yI1paTIqJV0drf+VSvz1xmO3V89Hfq6pJjsFNXr/9vg7ZTR+li/w0ucbaiIpitauxxF2NbxbEdCxOfRjf4DVbATV2jDr5d6gWD2B5PK5er00tV1a4WxqXOvSodcbljr2kVVVEdlY7uUqW9vVopV6Z37tU5Pe5U5faq6unobK/2cIlVA8BWj3asEZjcBiuubgmXlLEcKeO4Imi7FFmxNfztlxxN+t/NydGSHK3JMSA5BhLVEr8fpRtDk6euv6eu2VPX4qlr9dQN8NQNpHUkMaUZGzBIIzQNpx+hGnRPTxPOVnd/nK3OZpwt1QKzVVWtMFtdagDMVkUNJKwogUWzNFC3szqs3fJAYLvaBIhXIIZKKIYlZAwHAfGSVVzMWf0cALQ1GIwZnN9enQFyW3GOzewAmZMhFLaGsX9DBHBvGjZuJYV7KBi3KWitaAXaGkZhawVjBfJRcY6HCXBnOIWtFezfcAHcm4WNW0nh3pyKoRUtQFsjKGytYKxAPirO8QgB7oyksLWC/RspgHtU2LiVFO4tqBha0Qy0NZrC1grGCuSj4hyPFuDOGApbK9i/MQK4twwbt5LCvRUVQyv6A221UdhawViBfFSc4zYB7oylsLWC/RsrgHvrsHErKdzbUDG0ogloa1sKWysYK5CPinO8rQB3xlHYWsH+jRPAvV3YuJUU7u2pGFrRD2hrPGG1Qgoz8iGWHShsfeT8AtugYl6PF2gvE3A+xr4n1LC6Ue7N+wTLPsp38pSMtpX5xY7HRH2eZIJjHobhD+4TDhqoQZc0edREwhFxEhVDuJGYJ3sw99WmzaXJmksNGr/7kJWPY8i4ILCYMkXS4Sm0fuXvq/0phFP9qUC8UjGcSusXrL7an0pYMUD37pM0bmSepyL9XPsEXhXJnxiYE1us2G4b1Rb0bGMHcDuS8nMSwE/zZOLGiH+crSjkKNL2V0k6bM91sgbdnuIQ+V/SICiGsigRkQm1Y1EycTZOGxXgijYnUOgXMiYAE90OtFUG2rJjWrZiKjFvLAnYbadiNJASoZS6qor5ZldXbm92dejzNBMQQ3CuKNJbXB2EayjTwImUEAjGix56I0V8Os6vHBa/1i5UTrfso3wnT+mjbeVW2PEwr8Z1muCYhswfXCIctIwLQbFDHlUhHBE7SSaZ6MUvJOYdN4B5Y23bXNpRcynPxa8KGIspMyQdnkGvrs4b+3dmEK7hzgTilYrhTHp1wdrYvzOTsGKA7oE7NW5knmcC/GzvUtV44bQus/iF5M9OwJzYYsV2d6baguZpB8l0LuiOuhOA+fW0+DVL0uFZ1h/KGvTXsvglMaoD2SrkQtrOtp+2osy2/qApIS+kzQbaegvQlh1T267EPJmTie6lkT7OpmI0tp0J1YPkuygHtJXbotxb9XmOCYhpLPxBxanji6QX6giW/Fi9lXCNZw4OY649LM7v/FaK5+rz20xADAHnUnr7Ib5ImpRzCEfKuYQj5duAyfXtAYbuJRn7HAqZ5K+vPcXmJcf85NglOXZNjt2SY/fk2CM5FhDVNqR5lG5c8z11u3jqdvXU7eap291Tt4enbgGtIwmahEwWJiJ6j7I5QB/nEUpwenrm42x174Kz1bkrzpbajXBDxt1htrrUHjBbFbWAsCKHfgdmgW634ClQeQGwXb0diFcghkoohiVkDN8BxEtWQd/l2gNo651gzOhlAsYK5LbiHL+T8H3vnhS2hrF/ewrgflfYuJUU7neDcZuC1ordgbbeQ2FrBWMF8lFxjt8jwJ33Uthawf69VwD3+8LGraRwv5+KoRW7AW19gMLWCsYK5KPiHH9AgDsfpLC1gv37oADuD4WNW0nh/jAVQyt2Bdr6CIWtFYwVyEfFOf6IAHc+SmFrBfv3UQHcHwsbt5LC/XEqhlbsArT1CQpbKxgrkI+Kc/wJAe4spLC1gv1bKIB7r7BxKyncXVQMrZgPtNVNYWsFYwXyUXGOuwW4U6WwtYL9qwrg7gkbt5LC/UkqhlbMA9raG5iXPJ+CqieZXFFGPyvOv+1Y7KPPnzIBMQ9H7EPpByb4IvcNBPRTUPV9J1Lc5bx2tw/hSPkpHMa4IKQsuRUed2G27Vjsq8+fNgExBNyX0qTki97iOBUOKSs97rug+xKOlJ8GJiCHl5JLjH2foPKTjilSNPYFYiRP6aPtDb54vZ8+728IYBrafpRufPtbTqDJwongADa+AcmS9YXz/YB+7U+ywzH0VI6nCvOA9ngIvrflL8hubkO8Rfr8Gf5hN95FlG7QfJEZ4qGHIpyUHsLPkbqjsOeGhkDwtYBIhowN2fxMDcMXATF/BpgXIG8UMhd5Tg+A4p6boC3W58+agBjxWkxpQeOLpOesdhCzNpbFhGssnyWZ5Lrxy+rn50imM/h/CqxLYN8uA2geSo18QPZKnOdFFn6Q3ZqdED5vfkFPR9jxzwmQ/wB6/fdoAvlQnOgDKE0miZ0pUCM387YUdxiLCT/1ydCbp9YEFpNM54HmAbD91IwyDtTng4zTZkTBH+zs1B1E8qOMAwhH8oOAtr4AtGXH9AtWTFG3q9wGiPL7AM0LyZFlvHFlgw0ayZ84YyGroG9LHgi09cUMmCsezOhOZZHmNJqDi4C2kBz8EpCDee4BdiDQb9vfgyUdPljA7iFAMkjhPsQKMMiuyHM3LE5fIvyIEimgX6ZidBpIXn4FmIs8RQrZwdv+flXS4a8K2D2UwhYpxn2oFWCQXZERCvf+7G/GEYrkVFUhZ0Zfo2II3qFAW18nrODZeJHYDSfNIykon7mT+wrhO2Kkj1keS+lxCnlKH21v8LGUw/T5cP5hLxMcRut6RVN3uOUEmjDmsZS+BtAFbQjTkC14KbtShMn6aMphhBObw8FERt+hn6u5iO70D8fZKug+kT257RN5hD4faQJiROYISt9t5ouKtE/kEYQj+5HA5OaxTyRjf3OfSBHb3n0ilyTHUclxdHIckxzHJsdxyXF8ciwlqm1ISyjduI7y1B3tqTvGU3esp+44T93xnrqltI4kaBIyWZiIIe8TuYRwo6ejcLa6j8bZ6jwGZ0sdC7NVVcfBbHWp42G2KmopYUUOvR66VLdb8DSsvBTYrr4BxCsQQyUUwxIyht8E4iWroJdYjgfa+hYYM3qpgrECua04x98ifN97AoWtYezfCQK4Twwbt5LCfRIYtylorTgOaOvbFLZWMFYgHxXn+NsC3DmZwtYK9u9kAdzfCRu3ksL9XSqGVhwLtPU9ClsrGCuQj4pz/D0B7nyfwtYK9u/7Arh/EDZuJYX7h1QMrTgGaOsUClsrGCuQj4pzfIoAd35EYWsF+/cjAdw/Dhu3ksL9EyqGVhwNtPVTClsrGCuQj+oniY2fCnDnZxS2VrB/PxPA/fOwcSsp3L+gYmjFUUBbv6SwtYKxAvmoOMe/FODOryhsrWD/fiWA+9dh41ZSuH9DxdCKJUBbpwLzkudTUHUkkysC+skvrNmxWKbPp5mAmIcjllH6gQm+aJDjFPopqDoAkfhmdgJULSMcKU/DYYwLSMrebQU97sJs27FYrs+nm4AYAi6nNCn5oiGOU4GSssq2lhOOlKcDE5DHPpGMfVmg+TExRYrGciBG8hSA7d6H8+2cn6HPZxoCmIZ2BqUbH180WIgsnAgOIHqfyCKQJUvPxxjPAPp1JskOx9BTOZ4qLAHa4yH4qZa/ILu5DfFW6PNZ/MNuvCso3aD5IjPEQw9FOCm/Jvwc6eAo7LmhIRAa9yGRDBkbQH6aYfgKIOazgHkB8kYhc5Hn9AAo7rkJ2kp9PtsExIjXSkoLGl8kPWe1g5i1sawkXGM5m2SSi94q7xyS6QxCEVgmcB77REqNfED2SpznFRZ+kN2ajSh+a35BT0fY8XMEyH8uvf57NIF8KE70uZQmUxH2ieQOYyXhpz6g3rx3TWAlyXQeaB4A20/NKOM8fT7fOG1GFPzBIKfufJIfZZxLOJKfD7R1AdCWHdMLrJiible5DRDl97maF5Ijy7jvJdWgkfyJMxayCvq25HlAW78DYa7EMrswrdCcRnNwBdAWkoMXAjmY5xZs5wH9tv29SNLhiwTsXgwkgxTui60Ag+yKPHfD4nQh4UeUSAG9hIrRaSB5eSkwF3mKFLKDt/29TNLhywTsXk5hixTjvtwKMMiuyAiFe3/2FzhCQU9VFXJm9HsqhuAhOf4HwgqejReJ3XDSPJKC8pk7uUsJ3xEjfUQ9lgLeJ7LGR/5h5/0Kfb6Sf9jLBFdQep9IvmiwEGHMYymIAMYWYdD7REoRJuujKVcQTmyuBBMZfYf+CM1FdKd/Jc5WnnebS4XYQs/ZJ/Iqfb7aBMSIzFWUvtvMFwnvE1lC7hN5FeHIfjUVkpQK6bfHXRFSXqPP15qAGAJeQ+n5IXpB8GrCEfAawhHwWpJJJJpw18LiV1HF3OVXcgPUSk1DuU6frzcBMQ3lOkqrN1/U5DgV7i6/FXUd4RrP9VRM9YaRsiRIylKtet+gzzeagBgC3kBpUvJFzY5TwZKyGqsbCEfKG4EJyOP9FsZ+XaD5MTFFisYNQIzkKRDbztDpJn2+2RDANLSbKN34+KL+QmThRHAA0e+3FIEsWYeNNwH9uhkY+zx7PqDfuQ3HVunzLSYgpqGtonTj44ukh2M3E244topwpLyFZIdj6Fs7N+scope9YSRPeoFVVIQGE5ftPN2qz7eZpJnGwR80OnW3WQmQSjB6mVoqwVm/hOBWwjXm2wjbmOson4cAbgX6bft7u6TDtwvYvQNIBincd1gBBtkVeQiAGyn7C+3JsequkI3/jyTT66Duaxo/kRy/E5iLPAUPKdS2v3dJOnyXgN27KWzBY9x3WwEG2RUTPPY3ZMG7DZjvP1ExBA/J8T8TVvBsvEjshpNmoRLlM3dydxJ++of0EbdYKfbUU2qx8h59vpd/2FO9e6xgo8lhFiZRgTfkQE8dpciRdXHyHsIJy71CpEV3yPfi+JfrImqEi6/cF286onCfPt9vAmJEgSukv6U2IlxDuY9wDeV+YCLz+Jba+2jdgrdUfuKMhTwFZDv3b6ldnRwPJMeDyfFQcjycHI8kx6PJsYaotiGtpvTdiAc8dQ966h7y1D3sqXvEU/eop24NrSMJmoRsj4mI/pbaCOjjasKNbB7A2ep+EGer8yGcLfUwzFZVPQKz1aUehdmqqDWEFTn0rf01ut2Cp0PlNcB29RcgXoEYKqEYlpAxfAyIl6yCXup4FGjrcTBm9JIBYwVyW3GOHyd83/sEha1h7N8TArj/GjZuJYX7b2DcpqC14hGgrScpbK1grEA+Ks7xkwLceYrC1gr27ykB3H8PG7eSwv0PKoZWPAy09TSFrRWMFchHxTl+WoA7z1DYWsH+PSOA+59h41ZSuP9FxdCKh4C2nqWwtYKxAvmoOMfPCnDnOQpbK9i/5wRw/zts3EoK93+oGFrxINDW8xS2VjBWIB8V5/h5Ae68QGFrBfv3ggDu/4aNW0nhfpGKoRUPAG29RGFrBWMF8lFxjl8S4M7LFLZWsH8vC+BmgwHjVlK4o6gYWrEaaKsOhzmXr0XjpK8G2uOc11kPuYPs5vYqar32vcF94II/cOv4IvMqKrpRrtZG0Y3yxMDFyBAIjfskITFCfi0aP8RQH+EwNwDFCMgbhczFm+/Wu6VW0Bp1EPq54tXoEbR+UbHerW8ENpZ+QgKB/maopkimMwhHYCu5fC2a1MgHZK/Eea4XGEnZMe2/vkdI42ylxI73AgCTv/kN0KMJ5ENxops9ZCrC16Jxh8FCj576IPeYaBTqPNA8ALafmlFGi3a01R1RtOgRhV3XmsMooxnYs7UCbQ0A2rJjOsCKKWp9xG2AKL85Ny2R7MgyzlKcBo3kT5yxkFXQ62AtQMwDgaNBInynwgOURgEO1gMHFUgObgKecrujc1PQHVYL0G/b30GRoMODIrzdwUAySOEeLLTwi56dsDhtIjCiRArokIJ0Gkhebgq+eZKXSLUKidTQSNDhoQIiNSxwkWLcw3ISqawjFO79WyP8BkHAqapCzoyGF0TwkBzfDCx4Nl4kdqkNgriT21SgI36jbxC0uRajEe5yzOZR+mvR+KL+QoRBbxpkCPNG2TRoc6DYjIiwREZ1ePbeJyMEBiUjIlQ+qhu1CRFieQ8SA5XfN1CN1EEY5QrPSI/wjIpefWMiZBCzNsaRwMY4KsIloJg7Y1VyI+UWOgijXVJuEaUfgRgdFWu3rC2ApBwNXLTNk5SjouKRcowOwpYuAcd4SLllDqQcFeFIOQZIyi0DvZNg/OMGOEZgTSG/BlTB9UZxfkONrXQQ2tzGslWUvuXcJt6AaoOYtQFtBWxAbVERSRmrtgKScqwOwtYuKcdG6aVotIK3AQk4FkjArYUSiSbc1rD4VZTPv6xxnEBr92VEr5ZNAPq4jbDYSAwdtxG6I+AWiG1HcLbVvo9zBYc/eNapGxeJfW/hK4HEriDGalugEI0ryC0GJObtajBns2ZzaTvNr425z4qMCwKLKdtHgg5v772/kc3y9sD7RuOBZJOK4XjvsnA2y+PBYoDulcdp3Mg8++KYNT87AONoC8wOnhGzxC0HlO95To2kOjJC+umMVCboIEx0RyoTcpgajQNOjSYABXNiQaZGE3Hxa/eNGNDiyTco5wHtfTKxsbflL8huzShk0qs1gqxkmwzsTbqBtqrgRoAmPydmsmeOKPHylCloDEBbokID5GhN7zNFOzrV7X2m6D9o1021nDAF3SNNBvYiU4G2YqAtO6a2XfQwjmM5JRLYHIVkchRnLBIxnKvbArpBTyno3YczSUYwCehnJa4VOaWDUHJFTkXpe8p80SDHKbTI2UHMMmxMgCoFFKZSzqvUWR+jPFPnEC1wIJKr3h9FmJMmbcbOU7tOVNltHPzBAKeOL6oXTjD6uVapBGf9aqt2YGMugxvza13NjrMV1Q5eODOlIxJ0uENgiDBNeAU6zlZ6cU/zzP/ijMXna1Yh4UbaHkF7crS6K2Tjny7U66Bv6SE5XgHmIk/BKwsJXmck6HCngODtGLjgMe4dCyR45cAFrwzM94yCCB6S4zPBgmfjRWI3nFye2FiGazeKO7mKwPQP6eNykC2OH3kKwHZvu7bzvpMWo1nu9G8nK9hocnDQUcGKLXKgp45S5MgSP7a1E1BYZkUypEV3yLMiVPym9a4NGq40OD7XUe3X25Pnuk593uyxU4bOOHHRtfZ1e27gs5N1UOa8eM/8FSccOd7+7LTI//+ML+ahRfON5C2Wz3zNbP3vOFspGfutMvZjd9c7G4v9d00x2tPg+X/Rev7t6taGrt3QqH+g5zNjc6g+2/4aHEP02cSy0bKLjKWx30/GvjL2m2Tst/u4YNeZuLlLjvbvxqdmJ+ZgXxdGHv/qnb/p+mhf4+OvexPHHZjVv4Zrffw1nw2mtH/u/2v2+GrXGW752oKbF6NRjeux1WR9bl/f5FwrlcOhHp+i9fzt4TI+vNKmhsnY9+rrcOv3YQ5Om1ezQT4Ye4YDjZQudc5n6+vnIrx/yvXFpy+mGM4Ms+pMPP8HXUSGctqeAQA=",
  "debug_symbols": "pdjNbhNJFEDhd/E6i76/VTWvMhohAwZFspLIJEgjxLtPV98+EBazaW98T2Luh7C7bOwfp8+Xj29fPzw+fXn+dvrr7x+nj7fH6/Xx64fr86fz6+Pz0/rbHz8fTvz44fV2uay/Or27f916Od8uT6+nv57erteH0/fz9W37Q99ezk/bfD3f1nuXh9Pl6fM6V/DL4/Uy6+fD7+3l/1dlsX1Z5Pd6HNpvR/ZN2Ld+3777kf3R931d7twXObCvGuzbvftHHn8dbd+3Q/9+HfJrP+7bP3T9mTr7h66fd/tuB/Z94fF30SP7xt/vfuT59/i1n8ud+0ceP+/Kfr9zfxy5/mLh/IXcua9HHr/49foTduT6CU/2Q+/bP/T8R+P5j37vfh7Yz4XHLyXu2z/0/KXx/Oeh94/3++OP/X/Wn86fHm9/vOOffH3LeDjFdpvbbdtu+3Y7tltZakgNrWE1CpASpAgpQwqRUrQULUVL0VK0FC1FS9FStBQtxUqxUqwUK8VKsVKsFCvFSrFSvBQvxUvxUrwUL8VL8VK8FC8lSolSopQoJfYHtpQoJUqJVVlfZWJV1v+s5FJDamgNq+E1osaqrFd3rsr6Ip+9xthGW2pIDa1hNbxG1MgapbRSWim9lF5KX5X1NPdVWd+Uu9eIGlmj1eg1xjbGqqxX4ViVsQ6tYTW8xnxc1st45D7bPvs+R01ZFkIIJYxwIogkGtEJZEEWZEEWZEEWZEEWZEEWZEVWZEVWZEVWZEVWZEVWZEM2ZEM2ZEM2ZEM2ZEM2ZEd2ZEd2ZEd2ZEd2ZEd25EAO5EAO5EAO5EAO5EAO5ERO5ERO5ERO5ERO5ERO5IbckBtyQ27IDbkhN+SG3JA7ckfuyB15njTZXj+nrDOSaEQnxh7z1FUIoYQRTiAP5IE8kMcu67IQQihhhBNBJNGITiALsiALsiALsiALsiALsiArsiIrsiIrsiIrsiIrsiIbsiEbsiEbsiEbsiEbsiE7siM7siM7siM7siM7siMHciAHciAHciAHciAHciAnciInciInciInciInciI35IbckBvydgZtxpRzRhKN6MTYYzuDWwgx5TZjyn2GE0Ek0YhOjD22M7iFEEogD+SBPJAH8kAeu2zLQgihhBFOBJFEIzqBLMiCLMiCLMiCvJ3BMaPNrypmdGLsMc9ghRBKGOFEEEkgK7IiG7IhG7IhG7IhG7IhG7IhO7IjO7IjO7IjO7IjO7IjB3IgB3IgB3IgB3IgB3IgJ3IiJ3IiJ3IiJ3IiJ3IiN+SG3JAbckNuyA25ITfkhtyRO3JH7sgduSN35I7ckTvyQB7IA3meQd0+BUxZZwSRRCM6MSp8nsEKIZQwwokgkpiyzejE2GOewQohlDBiyj5jyjEjiUZ0YuyxncEthFDCCCeQFVmRFVmRDXk7gzljym2GEU4EkUQjOjH22M7gFlPuM6Y8ZhjhRBBJNKITY4/tDG4hBHIgB3IgB3IgB3IgJ3IiJ/L2WW5+F/D9fHs8f7xevtVX7V/enj69++b99d8X7uG7+Zfb86fL57fbZX5m3+5bP8X/Bw==",
  "file_map": {
    "50": {
      "source": "fn main(x: u64, y: u8, z: i16, u: i64) {\n    // runtime shifts on compile-time known values\n    assert(64 << y == 128);\n    assert(64 >> y == 32);\n    // runtime shifts on runtime values\n    assert(x << y == 128);\n    assert(x >> y == 32);\n    // regression tests for issue #8176\n    assert(u >> (x as u8) == 0);\n    assert(z >> (x as u8) == 0);\n\n    // Bit-shift with signed integers\n    let mut a: i8 = y as i8;\n    let mut b: i8 = x as i8;\n    assert(b << 1 == -128);\n    assert(b >> 2 == 16);\n    assert(b >> y == 32);\n    a = -a;\n    assert(a << 7 == -128);\n    assert(a << y == -2);\n\n    assert(x >> (x as u8) == 0);\n\n    assert_eq(z >> 3, -97);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_to_radix",
    "directive_invert"
  ]
}
