tooling/nargo_cli/tests/snapshots/execution_success/bit_shifts_runtime/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u64, v1: u64, v2: i16, v3: i64):
    (no terminator instruction)
}
